<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="126dp"
            android:layout_height="21dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="Please select team"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView3"
            tools:text="Please select team" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="132dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="Please select a type"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ph"
            tools:text="Please select a type" />

        <EditText
            android:id="@+id/fn"
            android:layout_width="223dp"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/ln"
            android:layout_width="223dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fn"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/ph"
            android:layout_width="221dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="textPersonName"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ln"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.502" />

        <Button
            android:id="@+id/submit"
            android:layout_width="96dp"
            android:layout_height="39dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="submitOfficer"
            android:text="@string/submit"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <ScrollView
            android:id="@+id/scrollView5"
            android:layout_width="186dp"
            android:layout_height="85dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <LinearLayout
                android:id="@+id/team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="190dp"
            android:layout_height="136dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ph">

                <RadioButton
                    android:id="@+id/officer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/officer" />

                <RadioButton
                    android:id="@+id/detective_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detective" />

                <RadioButton
                    android:id="@+id/commisioner_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commissioner"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="392dp" />

                <RadioButton
                    android:id="@+id/sergeant_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sergeant" />

                <RadioButton
                    android:id="@+id/lieutenant_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lieutenant" />

                <RadioButton
                    android:id="@+id/captain_button"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:text="@string/captain" />

                <RadioButton
                    android:id="@+id/major_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/major" />

                <RadioButton
                    android:id="@+id/colonel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/colonel" />

                <RadioButton
                    android:id="@+id/inspector_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inspector" />

                <RadioButton
                    android:id="@+id/deputy_chief_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deputyChief"
                    tools:layout_editor_absoluteX="169dp"
                    tools:layout_editor_absoluteY="383dp" />

                <RadioButton
                    android:id="@+id/assistant_chief_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assistantChief"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="312dp" />

            </RadioGroup>
        </ScrollView>

</android.support.constraint.ConstraintLayout>