<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:text="Officer information"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Officer information"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/Delete"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@android:color/holo_red_dark"
        android:onClick="deleteInfos"
        android:text="@string/delete"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="86dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:onClick="updateInfos"
        android:text="@string/update"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ScrollView
        android:layout_width="294dp"
        android:layout_height="357dp"
        android:fillViewport="true"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.8"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/Delete">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <EditText
            android:id="@+id/fn"
            android:layout_width="220dp"
            android:layout_height="39dp"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/ln"
            android:layout_width="222dp"
            android:layout_height="41dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fn"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/ph"
            android:layout_width="219dp"
            android:layout_height="39dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="textPersonName"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ln"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/selectType"
            android:layout_width="31dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="Type"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ph"
            tools:text="Type" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="203dp"
            android:layout_height="124dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/selectType">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ph">

                <RadioButton
                    android:id="@+id/officer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/officer"
                    tools:text="officer" />

                <RadioButton
                    android:id="@+id/detective_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detective" />

                <RadioButton
                    android:id="@+id/sergeant_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sergeant" />

                <RadioButton
                    android:id="@+id/lieutenant_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lieutenant" />

                <RadioButton
                    android:id="@+id/captain_button"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:text="@string/captain" />

            </RadioGroup>
        </ScrollView>

        <TextView
            android:id="@+id/selectTeam"
            android:layout_width="128dp"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="Team"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView3"
            tools:text="Team" />

        <ScrollView
            android:id="@+id/scrollView5"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            app:layout_constraintHorizontal_bias="0.662"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectTeam"
            android:layout_weight="0.41">

            <LinearLayout
                android:id="@+id/team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>


    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>